<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/todo_background_todo_app"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/white"
        android:hint="@string/todo_app_dialog_edit_text"
        android:textColor="@color/white"
        android:textColorHint="@color/todo_subtitle_text" />

    <RadioGroup
        android:id="@+id/rgCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbBusiness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_business_category"
            android:checked="true"
            android:text="@string/todo_app_dialog_rb_negocio"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <RadioButton
            android:id="@+id/rbPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_personal_category"
            android:text="@string/todo_app_dialog_rb_personal"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"/>

        <RadioButton
            android:id="@+id/rbOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/todo_other_category"
            android:text="@string/todo_app_dialog_rb_otro"
            android:textColor="@color/white"
            android:layout_marginStart="16dp"
            />
    </RadioGroup>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/todo_accent"
        android:text="Guardar"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:layout_marginTop="16dp"
        />

</LinearLayout>